Fix footer alignment issues
Make changes in footer text

--- a/src/css/base/responsive.scss
+++ b/src/css/base/responsive.scss
@@ -479,7 +479,7 @@ footer {
     }
 
     .personal-card {
-        justify-self: center;
+        justify-self: end;
         align-self: start;
     }
 
