--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -402,7 +402,7 @@ footer .footer-content .footer-dev-info {
   grid-area: info;
 }
 footer .personal-card {
-  justify-self: center;
+  justify-self: end;
   align-self: start;
 }
 footer .footer-navigation {
@@ -1301,6 +1301,7 @@ footer {
 }
 
 .footer-content {
+  justify-self: center;
   width: 90%;
   max-width: 75rem;
 }
@@ -1371,7 +1372,7 @@ footer {
   flex-direction: initial;
   justify-content: center;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0.5rem;
   padding-top: 0.5rem;
 }
 .footer-dev-info img {
